css/app_mobile.css
@media (max-width: 768px) or (max-height: 400px)  {
    body{
        font-size: smaller;
    }
    button{
        font-size: smaller;
        padding: 5px;
        margin: 5px;
    }
    #homelink{
        left: 0;
        top: 5px;
        width: 110px;

    }
    #homelink img{
        height: 50px;
    }

    #canvas .puzzlepiece{
        border-radius: 25px;
    }
    .tuto-text{
        box-sizing: border-box;

        position: fixed;
        width:100%;
        bottom: 0;
        margin: 0;
        padding: 0;
        font-size: smaller;
        padding-top:5px;
        max-height: 30%;
        overflow: auto;
    }

    #question-list .question{
        border-radius: 15px;
        width:150px;
        height: 100px;
    }

    #question-list .question-row button{
        margin: 30px auto;
        display: block;
        float: none;
    }

    #question-list .question-row .text-answer{
        margin: 0 auto;
        width:85%;
    }

    #question-list .question-bottom{
        margin-top: 20px;
    }
}

@media (max-height: 400px) {
    .tuto-text{
        box-sizing: border-box;

        position: fixed;
        width:100%;
        bottom: 0;
        margin: 0;
        padding: 0;
        font-size: smaller;
        padding-top:5px;
        max-height: 40%;
        overflow: auto;
    }
    #canvas .puzzlepiece{
        border-radius: 25px;
    }
}

